--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" type="text/css" href="index.css"></link>
   </head>
   <body>
-    <p>Sheets API Quickstart</p>
+    <!-- <p>Sign into your google account to access results</p>
 
-    <!--Add buttons to initiate auth sequence and sign out-->
     <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
-    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
+    <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button> -->
     <div class="dropdown">
       <select id="mySelect">
         <option value="" disabled selected>Select a tab</option>
@@ -22,80 +21,8 @@
     </div>
     <div class="standings">
       <div id="container">
-        <h1>Standings</h1>
-        <div class="row" id="header">
-          <div class="team">Team</div>
-          <div class="wins">W</div>
-          <div class="draws">L</div>
-          <div class="losses">D</div>
-          <div class="goals">GD</div>
-          <div class="points">Pts</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 1</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 2</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 3</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 4</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 5</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 6</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 7</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        <div class="row">
-            <div class="team">Team 8</div>
-            <div class="wins">0</div>
-            <div class="draws">0</div>
-            <div class="losses">0</div>
-            <div class="goals">0</div>
-            <div class="points">0</div>
-        </div>
-        </div>
+        <img src="Korea Final Logo v2.png"></img>
+      </div>
     </div>
 
     <pre id="content" style="white-space: pre-wrap;"></pre>
